init firebase app

--- a/ireal-text-editor/app/templates/index.html
+++ b/ireal-text-editor/app/templates/index.html
@@ -17,6 +17,20 @@
 
         gtag('config', 'UA-112672250-1');
     </script>
+
+    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyDuFMhGDCnLynLD-HLg5gzDY1x1-KZpssg",
+            authDomain: "ireal-text-editor.firebaseapp.com",
+            databaseURL: "https://ireal-text-editor.firebaseio.com",
+            projectId: "ireal-text-editor",
+            storageBucket: "ireal-text-editor.appspot.com",
+            messagingSenderId: "1060242801088"
+        };
+        firebase.initializeApp(config);
+    </script>
 </head>
 
 <body>
