--- a/ireal-text-editor/app/templates/index.html
+++ b/ireal-text-editor/app/templates/index.html
@@ -19,6 +19,10 @@
     </script>
 
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-database.js"></script>
+
     <script>
         // Initialize Firebase
         var config = {
