build process improvement

--- a/ireal-text-editor/app/templates/index.ejs
+++ b/ireal-text-editor/app/templates/index.ejs
@@ -28,7 +28,7 @@
                 // Initialize Firebase
                 var config = {
                     apiKey: "AIzaSyDuFMhGDCnLynLD-HLg5gzDY1x1-KZpssg",
-                    authDomain: "localhost",
+                    authDomain: "<%=config.firebase.authDomain%>",
                     databaseURL: "https://ireal-text-editor.firebaseio.com",
                     projectId: "ireal-text-editor",
                     storageBucket: "ireal-text-editor.appspot.com",
