--- a/ireal-text-editor/app/templates/index.ejs
+++ b/ireal-text-editor/app/templates/index.ejs
@@ -26,15 +26,7 @@
 
             <script>
                 // Initialize Firebase
-                var config = {
-                    apiKey: "AIzaSyDuFMhGDCnLynLD-HLg5gzDY1x1-KZpssg",
-                    authDomain: "<%=config.firebase.authDomain%>",
-                    databaseURL: "https://ireal-text-editor.firebaseio.com",
-                    projectId: "ireal-text-editor",
-                    storageBucket: "ireal-text-editor.appspot.com",
-                    messagingSenderId: "1060242801088"
-                };
-                firebase.initializeApp(config);
+                firebase.initializeApp( <%=JSON.stringify(config.firebase) %>);
             </script>
 </head>
 
