--- a/ireal-text-editor/app/templates/index.ejs
+++ b/ireal-text-editor/app/templates/index.ejs
@@ -2,6 +2,12 @@
 <html lange="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="iReal Pro Online Text Editor">
+    <meta name="keywords" content="iReal,iReal Pro,Text editor,JavaScript">
+    <meta name="author" content="Maciej Zawiasa">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <style>
         body {
