--- a/ireal-text-editor/app/templates/index.ejs
+++ b/ireal-text-editor/app/templates/index.ejs
@@ -26,12 +26,13 @@
             gtag('config', 'UA-112672250-1');
         </script>
 
-        <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-firestore.js"></script>
 
-    <% } %>
+        <% } %>
 </head>
 
 <body>
@@ -40,7 +41,7 @@
     <% if (process.env.NODE_ENV === "production") { %>
         <script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
         <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
-    <% } %>
+        <% } %>
 </body>
 
 </html>
