--- a/ireal-text-editor/app/templates/index.ejs
+++ b/ireal-text-editor/app/templates/index.ejs
@@ -39,8 +39,8 @@
     <div id="root"></div>
 
     <% if (process.env.NODE_ENV === "production") { %>
-        <script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
-        <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
         <% } %>
 </body>
 
